[package]
name = "emergence"
version = "1.0.2"
edition = "2021"
description = "A small library to download and cache Advent of Code inputs"
repository = "https://github.com/Sciencentistguy/emergence"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
reqwest = { version = "0.11.13", features = ["blocking", "rustls-tls"], default-features = false }
thiserror = "1.0.37"

[dev-dependencies]
tempdir = "0.3.7"
